fixed a typo in the doc

--- a/components/pubnub-element/pubnub-element.html
+++ b/components/pubnub-element/pubnub-element.html
@@ -651,7 +651,7 @@ This element obtains information about the current state of a channel, including
 
     <core-pubnub publish_key="demo" subscribe_key="demo">
       <core-pubnub-here-now channel="testChannel" presence="{{presence}}">
-      </core-pubnub-history>
+      </core-pubnub-here-now>
     </core-pubnub>
 
     <h3>testChannel Presence</h3>
